# AI_RKNN_MODELS

./: .cursorrules  .gitignore  CMakeLists.txt  main.cpp  make.sh
ai_src/: CMakeLists.txt
ai_src/face_tracking/: CMakeLists.txt
ai_src/face_tracking/include/: BYTETracker.h  BoundingBoxIoUMatching.h  BoundingBoxTrackUtils.h  HungarianAlgorithmEigen.h  KalmanBBoxTrack.h  KalmanFilter.h  LinearAssignment.h
ai_src/face_tracking/src/: BYTETracker.cpp  BaseTrack.cpp  BoundingBoxIoUMatching.cpp  BoundingBoxTrackUtils.cpp  HungarianAlgorithmEigen.cpp  KalmanBBoxTrack.cpp  KalmanFilter.cpp  LinearAssignment.cpp
ai_src/include/: face_alignment.h  face_antispoofing_checker.h  face_checker.h  face_detection.h  face_extraction.h  face_replay_checker.h  feature_manager.h  head_pose_estimation.h  npu_model.h  obb_detection_yolov11.h  text_recognition_yolov11.h
ai_src/src/: face_alignment.cpp  face_antipoofing_checker.cpp  face_checker.cpp  face_detection.cpp  face_extraction.cpp  face_replay_checker.cpp  feature_manager.cpp  head_pose_estimation.cpp  npu_model.cpp  obb_detection_yolov11.cpp  text_recognition_yolov11.cpp
cmake/: common.cmake
examples/: CMakeLists.txt  test_face_detection.cpp  test_obb_detection.cpp  test_text_recognition.cpp
models/: aligned_datasets.txt  convert_iresnet.py  convert_models.py  dataset.txt  obb_classes.txt  obb_datasets.txt  text_crop.txt
python/: rknn_model.py  text_recognition_yolov11.py  yolov11_obb_onnx.py  yolov11_obb_rknn.py  yolov11_onnx.py  yolov11_rknn.py
src/utils/: types.h
